--- a/pages/search/search.css
+++ b/pages/search/search.css
@@ -32,6 +32,13 @@
   display: flex;
   margin: 30px 0;
 }
+#main #pages > .page {
+  width: 40px;
+  height: 42px;
+  text-align: center;
+  line-height: 42px;
+  padding: 0;
+}
 #main #pages span {
   padding: 10px 15px;
   border: 1px solid #333;
