--- a/pages/search/search.scss
+++ b/pages/search/search.scss
@@ -37,6 +37,13 @@
   #pages {
     display: flex;
     margin: 30px 0;
+    &>.page{
+      width: 40px;
+      height: 42px;
+      text-align: center;
+      line-height: 42px;
+      padding: 0;
+    }
     span {
       padding: 10px 15px;
       // background-color: #aaa;
