--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -82,4 +82,28 @@ body {
 
 .fs-20 {
   font-size: 20rem;
-}/*# sourceMappingURL=base.css.map */
+}
+
+.showMessage {
+  padding: 15px 23px;
+  border-radius: 5px;
+  font-size: 16px;
+  position: fixed;
+  top: 6%;
+  left: 50%;
+  color: #ffffff;
+  z-index: 999;
+  transform: translate(-50%, 0);
+}
+
+.showMessageSuccess {
+  background-color: #f0f9eb;
+  border: 1px solid #E1F3D8;
+  color: #67c23a;
+}
+
+.showMessageError {
+  background-color: #fef0f0;
+  border: 1px solid #fde2e2;
+  color: #F76C6C;
+}
